--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,12 +1,12 @@
-name: Sheel Commands
+name: Shell Commands
 
-on: [ push]
+on: [push]
 
 jobs:
   run-shell-command:
     runs-on: ubuntu-latest
     steps:
-      - name: echo a strng
+      - name: echo a string
         run: echo "Hello World"
       - name: multiline script
         run: |
