--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -6,9 +6,14 @@ jobs:
   run-shell-command:
     runs-on: ubuntu-latest
     steps:
-      - name: eccho a string
-        run: eccho "Hello World"
+      - name: echo a string
+        run: echo "Hello World"
       - name: multiline script
         run: |
           node -v
           npm -v
+      - name: Python Command
+        shell: python
+        run: |
+          import platform
+          print(platform.processor())
