--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -17,3 +17,11 @@ jobs:
         run: |
           import platform
           print(platform.processor())
+  run-windows-command:
+    runs-on: windows-latest
+    steps:
+      - name: Directory PowerShell
+        run: Get-Location
+      - name: Directory Bash
+        shell: bash
+        run: pwd
