--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -19,6 +19,8 @@ jobs:
           print(platform.processor())
   run-windows-command:
     runs-on: windows-latest
+    needs:
+      - run-shell-command
     steps:
       - name: Directory PowerShell
         run: Get-Location
