--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,4 +13,4 @@ jobs:
         with:
           who-to-greet: Josh
       - name: Log Greeting Time
-        run: echo "${{ steps.greet.outputs.time }}
+        run: echo "${{ steps.greet.outputs.time }}"
