--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,6 +11,12 @@ jobs:
         run: |
           pwd
           ls
+      - name: Checkout
+        use: actions/checkout@v3
+      - name: List Files
+        run: |
+          pwd
+          ls -a
       - name: Simple JS Action
         id: greet
         uses: actions/hello-world-javascript-action@v1.1
