--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,7 +12,7 @@ jobs:
           pwd
           ls
       - name: Checkout
-        use: actions/checkout@v3
+        uses: actions/checkout@v3
       - name: List Files
         run: |
           pwd
