--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,6 +2,7 @@ name: Actions Workflow
 
 on:
   - push
+  - pull_request
 
 jobs:
   run-github-actions:
@@ -14,7 +15,6 @@ jobs:
           echo $GITHUB_SHA
           echo $GITHUB_REPOSITORY
           echo $GITHUB_WORKSPACE
-          echo "${{ github }}"
       - name: Checkout
         uses: actions/checkout@v3
       - name: List Files
