--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,12 @@ name: Actions Workflow
 
 on:
   - push
-  - pull_request
+  pull_request:
+      types:
+        -closed
+        -assigned
+        -opened
+        - reopened
 
 jobs:
   run-github-actions:
