--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,13 +1,13 @@
 name: Actions Workflow
 
 on:
-  - push
+  push:
   pull_request:
-      types:
-        -closed
-        -assigned
-        -opened
-        - reopened
+    types:
+      - closed
+      - assigned
+      - opened
+      - reopened
 
 jobs:
   run-github-actions:
