--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,29 +1,29 @@
-name: Shell Commands
-
-on: [pull_request]
-
-jobs:
-  run-shell-command:
-    runs-on: ubuntu-latest
-    steps:
-      - name: echo a string
-        run: echo "Hello World"
-      - name: multiline script
-        run: |
-          node -v
-          npm -v
-      - name: Python Command
-        shell: python
-        run: |
-          import platform
-          print(platform.processor())
-  run-windows-command:
-    runs-on: windows-latest
-    needs:
-      - run-shell-command
-    steps:
-      - name: Directory PowerShell
-        run: Get-Location
-      - name: Directory Bash
-        shell: bash
-        run: pwd
+#name: Shell Commands
+#
+#on: [pull_request]
+#
+#jobs:
+#  run-shell-command:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: echo a string
+#        run: echo "Hello World"
+#      - name: multiline script
+#        run: |
+#          node -v
+#          npm -v
+#      - name: Python Command
+#        shell: python
+#        run: |
+#          import platform
+#          print(platform.processor())
+#  run-windows-command:
+#    runs-on: windows-latest
+#    needs:
+#      - run-shell-command
+#    steps:
+#      - name: Directory PowerShell
+#        run: Get-Location
+#      - name: Directory Bash
+#        shell: bash
+#        run: pwd
