--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,6 +1,7 @@
 name: ENV Variables
 
-on: push
+on:
+  - push
 
 env:
   WF_ENV: Available to all jobs
@@ -15,12 +16,12 @@ jobs:
         env:
           STEP_ENV: Available to only this step
         run: |
-          echo "WF_ENV: ${EF_ENV}"
+          echo "WF_ENV: ${WF_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
       - name: Log ENV 2
         run: |
-          echo "WF_ENV: ${EF_ENV}"
+          echo "WF_ENV: ${WF_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
   log-default-env:
@@ -62,6 +63,6 @@ jobs:
           echo "RUNNER_OS: ${RUNNER_OS}"
           echo "RUNNER_TEMP: ${RUNNER_TEMP}"
           echo "RUNNER_TOOL_CACHE: ${RUNNER_TOOL_CACHE}"
-          echo "WF_ENV: ${EF_ENV}"
+          echo "WF_ENV: ${WF_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
