--- a/.github/workflows/update-awslogs-image.yml
+++ b/.github/workflows/update-awslogs-image.yml
@@ -15,4 +15,4 @@ jobs:
         env:
           TAG: ${{ github.event.inputs.tag }}
         run: |
-          echo "Tag: $TAG
+          echo "Tag: $TAG"
