check to see what version of dependencies are installed

--- a/.github/workflows/update-awslogs-image.yml
+++ b/.github/workflows/update-awslogs-image.yml
@@ -16,3 +16,8 @@ jobs:
           TAG: ${{ github.event.inputs.tag }}
         run: |
           echo "Tag: $TAG"
+      - name: Test image dependencies
+        run: |
+          aws --version
+          jq --version
+          grep --version
