see what the github event holds

--- a/.github/workflows/update-awslogs-image.yml
+++ b/.github/workflows/update-awslogs-image.yml
@@ -16,6 +16,9 @@ jobs:
           TAG: ${{ github.event.inputs.tag }}
         run: |
           echo "Tag: $TAG"
+      - name: Get Workflow Calling Refs
+        run: |
+          echo ${{ github.event }}
       - name: Test image dependencies
         run: |
           aws --version
