Another try to get the github context

--- a/.github/workflows/update-awslogs-image.yml
+++ b/.github/workflows/update-awslogs-image.yml
@@ -17,8 +17,10 @@ jobs:
         run: |
           echo "Tag: $TAG"
       - name: Get Workflow Calling Refs
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
         run: |
-          echo ${{ github.event }}
+          echo "$GITHUB_CONTEXT"
       - name: Test image dependencies
         run: |
           aws --version
