--- a/.github/workflows/multi-job.yml
+++ b/.github/workflows/multi-job.yml
@@ -11,7 +11,7 @@ jobs:
       imageName: ${{ steps.setVar.outputs.imageName }}
     steps:
       - id: setVar
-      - name: Set Var
+        name: Set Var
         run: |
           echo "imageName=hello" >> $GITHUB_OUTPUT
 
