this time fix a typo

--- a/.github/workflows/multi-job.yml
+++ b/.github/workflows/multi-job.yml
@@ -18,7 +18,7 @@ jobs:
   use-env-var:
     name: Use Env Variable
     runs-on: ubuntu-latest
-    needs: set-env-vars
+    needs: set-env-var
     steps:
       - name: Use Var
         run: |
