--- a/.github/workflows/multi-job.yml
+++ b/.github/workflows/multi-job.yml
@@ -14,6 +14,9 @@ jobs:
         name: Set Var
         run: |
           echo "imageName=hello" >> $GITHUB_OUTPUT
+      - name: Use output var in same job
+        run: |
+          echo ${{ steps.setVar.outputs.imageName }}
 
   use-env-var:
     name: Use Env Variable
