fix: add code check to default inputs workflow

--- a/.github/workflows/default-inputs.yml
+++ b/.github/workflows/default-inputs.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
       - name: Greet the named user
         uses: ./.github/actions/action.yml
         with:
