--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -7,7 +7,7 @@ inputs:
     required: false
     description: name of user
 runs:
-  using: composite
+  using: "composite"
   steps:
     - name: Say Hello
       shell: bash
